update modal and fix title

--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,6 +1,6 @@
 <section class="sellers" data-aos="fade-down" id="sellers">
     <div class="inner-container">
-      <h2 class="sellers-title"><span class="sellers-title__orange">Top</span>Sellers</h2>
+      <h2 class="sellers__title"><span class="sellers__title--top">Top </span>Sellers</h2>
       <div class="carousel-container">
           <ul class="sellers-list">
             <li class="selers-list__item">
