--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -7,48 +7,48 @@
         </button>
         <h2 class="modal-buy__title"><span class="modal-buy__title--orange">BUY</span> NOW      
         </h2>
-        <ul class="carousel-desk-list">
-            <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="./images/sellers/buy-now/chocolate-1.png" alt="chocolate">
+        <ul class="modal-buy-list">
+            <li class="modal-buy-list__item">
+              <img class="modal-buy-list__img" src="./images/sellers/buy-now/chocolate-1.png" alt="chocolate">
             </li>
-            <p class="chocolate-buy__text">100g</p>
-            <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="./images/sellers/buy-now/chocolate-2.png"  alt="chocolate">
+            <p class="modal-buy-list__text">100g</p>
+            <li class="modal-buy-list__item">
+              <img class="modal-buy-list__img" src="./images/sellers/buy-now/chocolate-2.png"  alt="chocolate">
             </li>
-            <p class="chocolate-buy__text">200g</p>
-            <li class="carousel-desk-list__item">
-              <img class="carousel__img" src="./images/sellers/buy-now/chocolate-3.png"  alt="chocolate">
+            <p class="modal-buy-list__text">200g</p>
+            <li class="modal-buy-list__item">
+              <img class="modal-buy-list__img" src="./images/sellers/buy-now/chocolate-3.png"  alt="chocolate">
             </li>
-            <p class="chocolate-buy__text">300g</p>
+            <p class="modal-buy-list__text">300g</p>
           </ul>
-        <ul class="modal-list">
-            <li class="modal-list__item">
-                <label class="modal-list__label">Personal information
-                    <input type="text" class="modal-list__input" placeholder="Name" cols="22" rows="1" required />
+        <ul class="modal-buy-list">
+            <li class="modal-buy-list__item">
+                <label class="modal-buy-list__label">Personal information
+                    <input type="text" class="modal-buy-list__input" placeholder="Name" cols="22" rows="1" required />
                 </label>
-                <label class="modal-list__label">
-                    <input type="text" class="modal-list__input" placeholder="Surname" cols="22" rows="1" required />
-                </label>
-            </li>
-            <li class="modal-list__item">
-                <label class="modal-list__label">
-                    <input type="email" class="modal-list__input" placeholder="Enter your email" cols="22" rows="1" required />
+                <label class="modal-buy-list__label">
+                    <input type="text" class="modal-buy-list__input" placeholder="Surname" cols="22" rows="1" required />
                 </label>
             </li>
-            <li class="modal-list__item">
-                <label class="modal-list__label">Phone number
-                    <img class="modal-list__img" src="./images/icons/ukraine-flag.png">
-                    <p class="modal-list__number">+380</p>
-                    <input type="email" class="modal-list__input" cols="22" rows="1" placeholder="Phone Number" required />
-                </label>
-                <label class="modal-list__label">Card number                   
-                    <input type="email" class="modal-list__input" cols="22" rows="1" placeholder="Card Number" required />
-                    <img class="modal-list__img" src="./images/icons/Mastercard.png">
+            <li class="modal-buy-list__item">
+                <label class="modal-buy-list__label">
+                    <input type="email" class="modal-buy-list__input" placeholder="Enter your email" cols="22" rows="1" required />
                 </label>
             </li>
-            <li class="modal-list__item">
-                <label class="modal-list__label">Comment
-                    <textarea class="modal-list__textarea" cols="30" rows="10" placeholder="Enter text"></textarea>
+            <li class="modal-buy-list__item">
+                <label class="modal-buy-list__label">Phone number
+                    <img class="modal-buy-list__img" src="./images/icons/ukraine-flag.png">
+                    <p class="modal-buy-list__number">+380</p>
+                    <input type="email" class="modal-buy-list__input" cols="22" rows="1" placeholder="Phone Number" required />
+                </label>
+                <label class="modal-buy-list__label">Card number                   
+                    <input type="email" class="modal-buy-list__input" cols="22" rows="1" placeholder="Card Number" required />
+                    <img class="modal-buy-list__img" src="./images/icons/Mastercard.png">
+                </label>
+            </li>
+            <li class="modal-buy-list__item">
+                <label class="modal-buy-list__label">Comment
+                    <textarea class="modal-buy-list__textarea" cols="30" rows="10" placeholder="Enter text"></textarea>
                 </label>
             </li>
         </ul>
