--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -6,30 +6,30 @@
             </svg>
         </button>
         <h2 class="review-modal__title">LEAVE A REVIEW ABOUT
-            <span class="modal-review__title">OUR CHOCOLATE</span>
+            <span class="review-modal__title">OUR CHOCOLATE</span>
         </h2>
-        <ul class="modal-list">
-            <li class="modal-list__item">
-                <label class="modal-list__label">
-                    <input type="text" class="modal-list__input" placeholder="Name" cols="22" rows="1" required />
+        <ul class="review-modal">
+            <li class="review-modal__item">
+                <label class="review-modal__label">
+                    <input type="text" class="review-modal__input" placeholder="Name" cols="22" rows="1" required />
                 </label>
             </li>
-            <li class="modal-list__item">
-                <label class="modal-list__label">
-                    <input type="tel" class="modal-list__input" placeholder="Email" cols="22" rows="1" required />
+            <li class="review-modal__item">
+                <label class="review-modal__label">
+                    <input type="tel" class="review-modal__input" placeholder="Email" cols="22" rows="1" required />
                 </label>
             </li>
-            <li class="modal-list__item">
-                <label class="modal-list__label">
-                    <img class="modal-list__img" src="./images/icons/ukraine-flag.png">
-                    <p class="modal-list__number">+380</p>
-                    <input type="email" class="modal-list__input" cols="22" rows="1" placeholder="Phone Number"
+            <li class="review-modal__item">
+                <label class="review-modal__label">
+                    <img class="review-modal__img" src="./images/icons/ukraine-flag.png">
+                    <p class="review-modal__number">+380</p>
+                    <input type="email" class="review-modal__input" cols="22" rows="1" placeholder="Phone Number"
                         required />
                 </label>
             </li>
-            <li class="modal-list__item">
-                <label class="modal-list__label">
-                    <textarea class="modal-list__textarea" cols="30" rows="10" placeholder="Enter text"></textarea>
+            <li class="review-modal__item">
+                <label class="review-modal__label">
+                    <textarea class="review-modal__textarea" cols="30" rows="10" placeholder="Enter text"></textarea>
                 </label>
             </li>
         </ul>
