fixed problems with images in section 'products'

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -42,7 +42,7 @@
           <img
             class="products-list__img"
             src="./images/products/card1/pine-chocolate@1x.jpg"
-            srcet="./images/products/card1/pine-chocolate.jpg 1x, ./images/products/2x/pine-chocolate.jpg 2x"
+            srcet="./images/products/card1/pine-chocolate@1x.jpg 1x, ./images/products/2x/pine-chocolate.jpg 2x"
             alt="pine-chocolate"
           />
           <h2 class="products-list__name">pineapple</h2>
@@ -52,7 +52,7 @@
         <li class="products-list__item swiper-slide">
           <img
             class="products-list__img"
-            src="./images/products/card2/classic-black-chocolate@1x.jpg"
+            src="./images/products/card2/classic-black-chocolate.jpg"
             srcet="./images/products/card1/black-chocolate.jpg 1x, ./images/products/2x/black-chocolate.jpg 2x"
             alt="classic-black-chocolate"
           />
@@ -63,7 +63,7 @@
         <li class="products-list__item swiper-slide">
           <img
             class="products-list__img"
-            src="./images/products/card2/honey-chocolate@1x.jpg"
+            src="./images/products/card2/honey-chocolate.jpg"
             srcet="./images/products/card1/honey-chocolate.jpg 1x, ./images/products/2x/honey-chocolate.jpg 2x"
             alt="honey-chocolate"
           />
@@ -74,7 +74,7 @@
         <li class="products-list__item swiper-slide">
           <img
             class="products-list__img"
-            src="./images/products/card2/roasted-chocolate@1x.jpg"
+            src="./images/products/card2/roasted-chocolate.jpg"
             srcet="./images/products/card1/roasted-chocolate.jpg 1x, ./images/products/2x/roasted-chocolate.jpg 2x"
             alt="roasted-chocolate"
           />
@@ -85,7 +85,7 @@
         <li class="products-list__item swiper-slide">
           <img
             class="products-list__img"
-            src="./images/products/card2/classic-chocolate@1x .jpg"
+            src="./images/products/card2/classic-chocolate.jpg"
             srcet="./images/products/card1/classic-chocolate.jpg 1x, ./images/products/2x/classic-chocolate.jpg 2x"
             alt="white-chocolate"
           />
