--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -23,14 +23,19 @@
     border-radius: 15px;
 }
 
-.pruducts {
+.products {
     &__title {
         margin-bottom: 32px;
 color: getColor('black-color');
 text-transform: uppercase;
 text-align: center;
 @include fonts(20px, 600, 1.2, normal, -0.03em);
-
+@media screen and (min-width: 768px) {
+    @include fonts(24px, 600px, 1.17, normal, -0.03em);
+}
+@media screen and (min-width: 1200px) {
+    @include fonts(24px, 600px, 1.17, normal, -0.03em);
+}
 &--orange {
     color: getcolor('orange-color');
 }
