--- a/src/sass/components/_video.scss
+++ b/src/sass/components/_video.scss
@@ -11,6 +11,10 @@
     &__orange {
         color: getcolor('orange-color');
     }
+    @media screen and (min-width: 768px) {
+        @include fonts(24px, 600px, 1.17, normal, -0.03em);
+    }
+    
     }
     
     .video-box {
@@ -45,7 +49,14 @@
         margin-bottom: 20px;
         color: getcolor('black-color');
         @include fonts(18px, 600, 1.33);
+        @media screen and (min-width: 768px) {
+            @include fonts(24px, 600px, 1.17, normal, -0.03em);
         }
+        @media screen and (min-width: 1200px) {
+            @include fonts(18px, 600px, 1.33, normal, -0.03em);
+        }
+        }
+        
     }
     
 .video-list {
