--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -54,7 +54,7 @@
                 <p class="reviews-list__text">
                     This is simply the best chocolate around, and
                     I'm just thrilled to support a local company!
-                    Best local chocolate - world class 
+                    Best local chocolate - world class :&#10089;
                 </p>
             </li>
         </ul>
