--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,12 +11,12 @@
         
         <ul class="footer-socials">
             <li class="footer-socials__item">
-                <a href="#" class="footer-socials__link"><svg class="footer-socials__socials">
+                <a href="#" class="footer-socials__link"><svg class="footer-socials__svg">
                     <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg></a></li>
 
             <li class="footer-socials__item">
-                <a href="#" class="footer-socials__link"><svg class="footer-socials__socials">
+                <a href="#" class="footer-socials__link"><svg class="footer-socials__svg">
                     <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg></a>
             </li>
