--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -35,5 +35,11 @@
         color: getcolor('white-color');
         @include fonts(129%, -0.02em)
     }
+
+    &__svg {
+        width: 58px;
+        height: 22px;
+        fill: getcolor('white-color');
+    }
     
 }
