--- a/src/partials/modal-thanks.html
+++ b/src/partials/modal-thanks.html
@@ -1,12 +1,12 @@
 <div class="backdrop is-hidden">
     <form class="modal">
-        <button class="modal-btn">
-            <svg class="modal-btn__svg">
-                <use href="./images/icons/symbol-defs.svg#icon-close"></use>
-            </svg>
-        </button>
+            <button class="modal-btn">
+                <svg class="modal-btn__svg" width="8" height="8">
+                    <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+                </svg>
+            </button>
         <h1 class="modal__title">thank you!</h1>
-        <p class="modal-text">
+        <p class="modal__text">
             We are glad that you ordered our chocolate and we are giving you a 20% discount on all our products.
         </p>
         <img src="./images/sellers/pop-up/chocolate-pop-up.png" alt="chocolate" class="modal__img">
