--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,34 +1,58 @@
 <footer class="footer" id="footer">
-    <div class="inner-container">
-        <div class="footer-top">
-            <h2 class="footer__title"><span class="footer__title--orange">Chocolate</span> a delicious cure for a bad day</h2>
+  <div class="inner-container">
+    <div class="footer-top">
+      <h2 class="footer__title">
+        <span class="footer__title--orange">Chocolate</span> a delicious cure
+        for a bad day
+      </h2>
 
-            <div class="footer-contacts">
-                <li class="footer-contacts__item"><p class="footer-list__text">Contact us</p></li>
-                <li class="footer-contacts__item"><a class="footer-list__address">+380 (68) 443-94-26</a></li>
-                <li class="footer-contacts__item"><a class="footer-list__address">simplychoc@gmail.com</a></li>
-            </div>
-        
-        <ul class="footer-socials">
-            <li class="footer-socials__item">
-                <a href="#" class="footer-socials__link"><svg class="footer-socials__svg">
-                    <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
-                    </svg></a></li>
-
-            <li class="footer-socials__item">
-                <a href="#" class="footer-socials__link"><svg class="footer-socials__svg">
-                    <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-                    </svg></a>
-            </li>
+      <div class="footer-contacts">
+        <h4 class="footer-contacts__title">Contact us</h4>
+        <ul class="contacts-list">
+          <li class="contacts-list__item">
+            <a class="contacts-list__address" href="tel:+380684439426">+380 (68) 443-94-26</a>
+          </li>
+          <li class="contacts-list__item">
+            <a class="contacts-list__address" href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+          </li>
         </ul>
-        </div>
+      </div>
 
-        <ul class="footer-pages-list">
-        <li class="footer-pages-list__item"><a href="#header" class="footer-pages-list__link">Home</a></li>
-        <li class="footer-pages-list__item"><a href="#video" class="footer-pages-list__link">How it’s made?</a></li>
-        <li class="footer-pages-list__item"><a href="#products" class="footer-pages-list__link">Our products</a></li>
-        <li class="footer-pages-list__item"><a href="#sellers" class="footer-pages-list__link">Top sellers</a></li>
-        <li class="footer-pages-list__item"><a href="#review" class="footer-pages-list__link">Chocolate is loved</a></li>
-    </ul>
+      <ul class="footer-socials">
+        <li class="footer-socials__item">
+          <a href="#" class="footer-socials__link"
+            ><svg class="footer-socials__svg">
+              <use
+                href="./images/icons/symbol-defs.svg#icon-instagram"
+              ></use></svg></a>
+        </li>
+
+        <li class="footer-socials__item">
+          <a href="#" class="footer-socials__link"
+            ><svg class="footer-socials__svg">
+              <use
+                href="./images/icons/symbol-defs.svg#icon-twitter"
+              ></use></svg></a>
+        </li>
+      </ul>
     </div>
+
+    <ul class="footer-pages-list">
+      <li class="footer-pages-list__item">
+        <a href="#header" class="footer-pages-list__link">Home</a>
+      </li>
+      <li class="footer-pages-list__item">
+        <a href="#video" class="footer-pages-list__link">How it’s made?</a>
+      </li>
+      <li class="footer-pages-list__item">
+        <a href="#products" class="footer-pages-list__link">Our products</a>
+      </li>
+      <li class="footer-pages-list__item">
+        <a href="#sellers" class="footer-pages-list__link">Top sellers</a>
+      </li>
+      <li class="footer-pages-list__item">
+        <a href="#review" class="footer-pages-list__link">Chocolate is loved</a>
+      </li>
+    </ul>
+  </div>
 </footer>
