--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
         />
       </a>
   
-      <button class="header-menu">
+      <button class="header-menu" data-open-menu>
         <svg class="header-menu__svg">
           <use href="./images/icons/symbol-defs.svg#icon-menu"></use>
         </svg>
