--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,28 +1,26 @@
-<section class="mobile-menu">
-  <div class="inner-container">
-    <button class="mobile__btn">
-      <svg class="mobile__svg">
-        <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+<section class="mobile-menu is-hidden">
+  <button class="mobile__btn" data-close-menu>
+    <svg class="mobile__svg">
+      <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+    </svg>
+  </button>
+  <ul class="mobile-list">
+    <li class="mobile-list__item"><a href="#header" class="mobile-list__link">Home</a></li>
+    <li class="mobile-list__item"><a href="#video" class="mobile-list__link">How it’s made?</a></li>
+    <li class="mobile-list__item"><a href="#products" class="mobile-list__link">Our products</a></li>
+    <li class="mobile-list__item"><a href="#sellers" class="mobile-list__link">Top sellers</a></li>
+    <li class="mobile-list__item"><a href="#review" class="mobile-list__link">Chocolate is loved</a></li>
+  </ul>
+  <div class="mobile-menu__socials">
+    <a class="mobile__socials">
+      <svg class="mobile__socials-svg">
+        <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
       </svg>
-    </button>
-    <ul class="mobile-list">
-      <li class="mobile-list__item"><a href="#header" class="mobile-list__link">Home</a></li>
-      <li class="mobile-list__item"><a href="#video" class="mobile-list__link">How it’s made?</a></li>
-      <li class="mobile-list__item"><a href="#products" class="mobile-list__link">Our products</a></li>
-      <li class="mobile-list__item"><a href="#sellers" class="mobile-list__link">Top sellers</a></li>
-      <li class="mobile-list__item"><a href="#review" class="mobile-list__link">Chocolate is loved</a></li>
-    </ul>
-    <div class="mobile-menu__socials">
-      <a class="mobile__socials">
-        <svg class="mobile__socials-svg">
-          <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
-        </svg>
-      </a>
-      <a class="mobile__socials">
-        <svg class="mobile__socials-svg">
-          <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-        </svg>
-      </a>
-    </div>
+    </a>
+    <a class="mobile__socials">
+      <svg class="mobile__socials-svg">
+        <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+      </svg>
+    </a>
   </div>
 </section>
