--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -10,7 +10,7 @@
                 <source srcset="./images/sellers/mobile/choc-coffe-mobile.jpg 2x" media="(max-width:767px)">
                 <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-1">
               </picture>
-              <p class="sellers__info">
+              <p class="sellers-list__info">
                 Crazy enough chocolate originates from a 
                 bean just like the coffee bean called Cacao. 
                 Cacao has been around for thousands of 
