--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,5 +1,5 @@
 <div class="backdrop-review is-hidden">
-    <form class="review-modal " >
+    <form class="review-modal">
         <button class="review-modal__close" data-close-review>
             <svg class="review-modal__svg">
                 <use href="./images/icons/symbol-defs.svg#icon-close"></use>
@@ -18,8 +18,7 @@
             <li class="review-list__item">
                     <img class="review-list__img" src="./images/icons/ukraine-flag.png" alt="flag">
                     <p class="review-list__number">+380</p>
-                    <input type="tel" class="review-list__input review-list__tel" placeholder="Phone Number"
-                        required />
+                    <input type="tel" class="review-list__input review-list__tel" placeholder="Phone Number" required />
             </li>
             <li class="review-list__item">
                     <textarea class="review-list__textarea" cols="30" rows="10" placeholder="Enter text"></textarea>
