add modal, subscribe

--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -1,12 +1,17 @@
-<div class="backdrop">
-<form class="modal">
-    <button type="button" class="modal__btn-close" data-modal-close>
-        <svg class="modal__svg-close">
-        <use href=""></use>
+<div class="backdrop-subscribe is-hidden">
+<form class="modal-subscribe">
+    <button type="button" class="modal-subscribe__btn-close" data-close-subscribe>
+        <svg class="modal-subscribe__svg-close">
+        <use href="../images/icons/symbol-defs.svg#icon-close"></use>
       </svg></button>
-    <img src="./images/subscribe/subscribe-btn/choc-subscribe.jpg" class="modal__img">
-    <h2 class="modal__title">EXPLORE OUR <br> <span class="modal__title--orange">NEW CHOCOLATE</span> FIRST!</h2>
-    <input type="email" class="modal__input" required="" placeholder="Enter your email">
-    <button type="button" class="modal__submit">Submit</button>
+      <div class="modal-subscribe__background">
+      </div>
+
+      <div class="modal-subscribe__info">
+        <h2 class="modal-subscribe__title">EXPLORE OUR <br> <span class="modal-subscribe__title--orange">NEW CHOCOLATE</span> FIRST!</h2>
+        <input type="email" class="modal-subscribe__input" required placeholder="Enter your email">
+        <button type="button" class="modal-subscribe__submit">Submit</button>
+      </div>
+    
 </form>
 </div>
