--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -2,7 +2,7 @@
 <form class="modal-subscribe">
     <button type="button" class="modal-subscribe__btn-close" data-close-subscribe>
         <svg class="modal-subscribe__svg-close">
-        <use href="../images/icons/symbol-defs.svg#icon-close"></use>
+        <use href="./images/icons/symbol-defs.svg#icon-close"></use>
       </svg></button>
       <div class="modal-subscribe__background">
       </div>
