--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -10,7 +10,7 @@
                 <source srcset="./images/sellers/mobile/choc-coffe-mobile.jpg 2x" media="(max-width:767px)">
                 <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-1">
               </picture>
-              <p class="sellers__info">
+              <p class="sellers-list__info">
                 Crazy enough chocolate originates from a 
                 bean just like the coffee bean called Cacao. 
                 Cacao has been around for thousands of 
@@ -23,11 +23,11 @@
                 <source srcset="./images/sellers/desktop/choc-filling-desk.jpg 1x, ./images/sellers/desktop/2x/choc-filling-desk2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/sellers/tablet/choc-filling-tabl.jpg 2x" media="(min-width:768px)">
                 <source srcset="./images/sellers/mobile/choc-filling-mobile.jpg 2x" media="(max-width:767px)">
-                <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-2">
+                <img class="sellers-list__img" src="./images/sellers/tablet/choc-filling-tabl.jpg" alt="chocolate-2">
               </picture>
               <picture>
                 <source srcset="./images/sellers/desktop/choc-column-desk.jpg 1x, ./images/sellers/desktop/2x/choc-column-desk2x.jpg 2x" media="(min-width:1200px)">
-                <img class="sellers-list__img" src="./images/sellers/tablet/choc-coffe-tabl.jpg" alt="chocolate-3">
+                <img class="sellers-list__img sellers-list__img--hidden" src="./images/sellers/desktop/choc-column-desk.jpg" alt="chocolate-3">
               </picture>  
               <button class="sellers-list__buy" type="button">Buy now</button>
             </li>            
