--- a/src/sass/components/_sellers.scss
+++ b/src/sass/components/_sellers.scss
@@ -1,8 +1,8 @@
 .sellers {
-    padding: 77px 30px 77px;
+    padding: 77px 0 77px;
 
     @media screen and (min-width:768px) {
-        padding: 106px 32px 105px;
+        padding: 106px 0 105px;
     }
 
     @media screen and (min-width:1200px) {
@@ -34,64 +34,61 @@
 
 .sellers-list {
     display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        gap: 16px;
+    }
 
     &__item {
-        margin-right: auto;
-        margin-left: auto;
-
-        &:nth-child(2) {
-            display: none;
-        }
-
-        &:last-child {
-            display: none;
-            margin-right: 0;
-        }
-
-        @media screen and (min-width: 768px) {
-            margin-right: 16px;
-
-            &:nth-child(2) {
-                display: flex;
+        &:nth-child(1) {
+            @media screen and (min-width: 1200px) {
+                max-width: 407px;
             }
         }
 
-        @media screen and (min-width: 1200px) {
-            &:last-child {
+        &:nth-child(2) {
+            @media screen and (min-width: 1200px) {
                 display: flex;
-                margin-right: 0;
+                flex-wrap: wrap;
+                justify-content: flex-start;
+                column-gap: 16px;
             }
         }
     }
 
     &__img {
-        margin: 0 auto 23px;
-        width: 100%;
+        margin-bottom: 23px;
+        width: 335px;
         height: 464px;
-        margin: 0px 20px;
         border-radius: 15px;
 
         @media screen and (min-width:768px) {
-            width: 344px;
+            min-width: 344px;
+            margin-bottom: 32px;
         }
 
         @media screen and (min-width:1200px) {
-            width: 368px;
+            min-width: 368px;
+        }
+
+        &--hidden {
+            display: none;
+
+            @media screen and (min-width:1200px) {
+                display: inline;
+            }
         }
     }
 
     &__info {
-        flex-shrink: 0;
-        margin-bottom: 32px;
         max-width: 290px;
         @include fonts(14px, 400, 1.29, normal);
 
-        @media screen and (min-width: 375px) {
-            max-width: 306px;
-        }
-
         @media screen and (min-width: 768px) {
-            margin-bottom: 0;
+            max-width: 306px;
         }
 
         @media screen and (min-width: 1200px) {
@@ -100,18 +97,16 @@
     }
 
     &__buy {
-        font-size: 18px;
-        font-weight: 600;
-        line-height: normal;
+        margin: 0 auto;
         border-radius: 100px;
-        background: getcolor('orange-color');
+        color: getcolor('white-color');
+        background-color: getcolor('orange-color');
         border: none;
         width: 120px;
         height: 41px;
+        @include fonts(18px, 600, 1.29, normal);
 
         @media screen and (min-width: 768px) {
-            display: flex;
-            align-items: center;
             width: 162px;
             height: 50px;
             padding-right: 40px;
@@ -119,7 +114,7 @@
         }
 
         @media screen and (min-width: 1200px) {
-            margin-left: auto;
+            margin: 0 0 0 auto;
         }
     }
 }
