--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -52,6 +52,6 @@
                 </label>
             </li>
         </ul>
-        <button type="submit" class="modal-buy__submit">Submit</button>
+        <button type="submit" class="modal-buy__submit" data-open-thanks>Submit</button>
     </form>
 </div>
