--- a/src/partials/modal-thanks.html
+++ b/src/partials/modal-thanks.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden">
+<div class="backdrop-thanks is-hidden">
     <form class="modal">
-            <button class="modal-btn">
+            <button class="modal-btn" data-close-thanks>
                 <svg class="modal-btn__svg" width="8" height="8">
                     <use href="./images/icons/symbol-defs.svg#icon-close"></use>
                 </svg>
