--- a/src/sass/components/_modal-thanks.scss
+++ b/src/sass/components/_modal-thanks.scss
@@ -1,4 +1,4 @@
-.backdrop {
+.backdrop-thanks {
     @extend %center;
     position: fixed;
     top: 0;
@@ -17,7 +17,11 @@
     max-height: 414px;
     border-radius: 15px;
     background-color: getcolor('orange-color');
-
+    @media screen and (min-width:768px){
+        max-width: 516px;
+        max-height: 414px;
+        padding: 154px 44px 154px 163px;
+    }
     &__title {
         color: getcolor('white-color');
         text-transform: uppercase;
@@ -26,25 +30,33 @@ font-weight: 600;
 line-height: 24px;
 letter-spacing: -2%;
 margin-bottom: 8px;
+@media screen and (min-width:768px){
+    font-size: 24px;
+    line-height: 28px;
+}   
     }
     &__text {
-        // @extend %center;
-       
-    
         color: getcolor('white-color');
         @include fonts($letter-spacing: -2%);
-        max-width: 219px;
+        max-width: 230px;
+        @media screen and (min-width:768px){
+            max-width: 309px;
+            @include fonts(18px);
+        }
     }
     &__img {
         position: absolute;
         left: 0;
         bottom: 0;
-        width: 80%;
-        height: 60%;
+        width: 243px;
+        height: 205px;
     }
 }   
 
 .modal-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 14;
     right: 14;
@@ -53,8 +65,16 @@ margin-bottom: 8px;
     height: 28px;
     padding: 10px;
     border-radius: 50%;
+    @media screen and (min-width:768px){
+        width: 38px;
+        height: 38px;
+        top: 24;
+        right: 26;
+    }
     &__svg {
         fill: getcolor('orange-color');
         @extend %center;
+        width: 11px;
+        height: 11px;
     }
 }
