--- a/src/sass/components/_taste.scss
+++ b/src/sass/components/_taste.scss
@@ -46,7 +46,10 @@
 
 .taste-list {
     @include flex($wrap: wrap);
-
+    row-gap: 20px;
+    @media screen and (min-width:768px)and(max-width:1199px){
+        row-gap: 30px;
+    }
     &__item {
         position: relative;
         border-radius: 5%;
