--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -34,10 +34,16 @@
   }
 
   &-menu {
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 28px;
     height: 28px;
     background-color: transparent;
+    @media screen and (min-width: 768px) {
+      width: 44px;
+      height: 44px;
+    }
     @media screen and (min-width: 1200px) {
         display: none;
       }
