--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -53,13 +53,13 @@
         </label>
         <label class="phone" for="FormTel">
           <p class="phone__text">Phone number</p>
-          <input type="text" name="phonenum" placeholder="Phone number" id="phone1" class="phone__input _req input-field" data-max-length="11" data-min-length="5"/>
+          <input type="number" name="phonenum" placeholder="Phone number" id="phone1" class="phone__input _req input-field" data-max-length="11" data-min-length="5"/>
         </label>
         <label class="card" for="FormCard">
           <p class="card__num">Card number</p>
           <input type="text" for="FormCard" name="cardnum" placeholder="Enter card" class="card__input _req input-field" data-max-length="16" data-min-length="16" />
           <svg class="buy-now-card__svg">
-            <use href="./imgs/icons.svg#card"></use>
+            <use href="./images/icons/Mastercard.png"></use>
           </svg>
         </label>
         <label class="comment" for="FormComment">
