--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -1,75 +1,57 @@
-<div class="backdrop2 is-hidden-buy" data-backdrop-buy>
-    <div class="buynow">
-      <form class="modal active1 modal-test" id="form_buy-now" action="">
-        <button data-close-buy class="product-modal__close" type="button">
-          <svg class="buy-now-close__svg">
-            <use href="./imgs/icons.svg#icon-close"></use>
-          </svg>
-        </button>
-        <h2 class="product-modal__title">
-          <span class="product-modal__span">BUY </span>NOW
-        </h2>
-        <ul class="product-modal__list slick__slider">
-          <li class="product-modal__item slick__slide">
-            <button class="buy-select__btn" type="button" data-select-btn>
-              <picture>
-                <source media="(min-width: 320px)" srcset=" ./imgs/modal/modal-2-1x.png 1x, ./imgs/modal/modal-2-2x.png 2x " />
-                <img src="./imgs/modal/modal-2-1x.png" alt="100g Chocolate" />
-              </picture>
-              <span class="product-item__button" type="button">100 g</span>
-            </button>
+<div class="backdrop is-hidden">
+  <form class="modal-buy">
+    <button class="modal-buy__close">
+      <svg class="modal-buy__svg">
+        <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+      </svg>
+      <h2 class="modal-buy__title"><span class="modal-buy__title--orange">BUY</span> NOW
+        <ul class="modal-buy-list">
+          <li class="modal-buy-list__item">
+            <img class="modal-buy-list__img" src="./images/sellers/buy-now/chocolate-1.png" alt="chocolate">
           </li>
-          <li class="product-modal__item slick__slide">
-            <button class="buy-select__btn" type="button" data-select-btn>
-              <picture>
-                <source media="(min-width: 320px)" srcset=" ./imgs/modal/modal-3-1x.png 1x, ./imgs/modal/modal-3-2x.png 2x "/>
-                <img src="./imgs/modal/modal-3-1x.png" alt="200g Chocolate" />
-              </picture>
-              <span class="product-item__button" type="button">200 g</span>
-            </button>
+          <p class="modal-buy-list__text">100g</p>
+          <li class="modal-buy-list__item">
+            <img class="modal-buy-list__img" src="./images/sellers/buy-now/chocolate-2.png" alt="chocolate">
           </li>
-          <li class="product-modal__item slick__slide">
-            <button class="buy-select__btn" type="button" data-select-btn>
-              <picture>
-                <source media="(min-width: 320px)" srcset="./imgs/modal/modal-4-1x.png 1x, ./imgs/modal/modal-4-2x.png 2x" />
-                <img src="./imgs/modal/modal-4-1x.png" alt="300g Chocolate" />
-              </picture>
-              <span class="product-item__button" type="button">300 g</span>
-            </button>
+          <p class="modal-buy-list__text">200g</p>
+          <li class="modal-buy-list__item">
+            <img class="modal-buy-list__img" src="./images/sellers/buy-now/chocolate-3.png" alt="chocolate">
           </li>
+          <p class="modal-buy-list__text">300g</p>
         </ul>
-        <div class="person-information__block">
-          <label class="person__information" for="FormName">
-            <p class="person-information__text">Personal information</p>
-            <inputid="FormName" type="text" name="name" placeholder="Name" class="person-information__input _req input-field" data-max-length="10" data-min-length="2" />
-          </label>
-          <label class="person-information__second-label" for="FormSurname">
-            <input id="FormSurname" type="text" name="surname" placeholder="Surname" class="person-information__second-input _req input-field" data-max-length="10" data-min-length="2" />
-          </label>
-        </div>
-        <label class="email" for="FormEmail">
-          <p class="email__text">Email</p>
-          <input id="FormEmail" type="text" name="email" placeholder="Enter your email" class="email__input _req _email input-field" data-min-length="5"/>
-        </label>
-        <label class="phone" for="FormTel">
-          <p class="phone__text">Phone number</p>
-          <input type="text" name="phonenum" placeholder="Phone number" id="phone1" class="phone__input _req input-field" data-max-length="11" data-min-length="5"/>
-        </label>
-        <label class="card" for="FormCard">
-          <p class="card__num">Card number</p>
-          <input type="text" for="FormCard" name="cardnum" placeholder="Enter card" class="card__input _req input-field" data-max-length="16" data-min-length="16" />
-          <svg class="buy-now-card__svg">
-            <use href="./imgs/icons.svg#card"></use>
-          </svg>
-        </label>
-        <label class="comment" for="FormComment">
-          <p class="comment__text">Comment</p>
-          <textarea id="FormComment" name="comment" placeholder="Enter text" class="buy-now__textarea" ></textarea>
-        </label>
-        <button type="submit" class="buy-submit__button" data-open-discount>
-          Submit
-        </button>
-      </form>
-    </div>
-  </div>
+        <ul class="modal-buy-list">
+          <li class="modal-buy-list__item">
+            <label class="modal-buy-list__label">Personal information
+              <input type="text" class="modal-buy-list__input" placeholder="Name" cols="22" rows="1" required />
+            </label>
+            <label class="modal-buy-list__label">
+              <input type="text" class="modal-buy-list__input" placeholder="Surname" cols="22" rows="1" required />
+            </label>
+          </li>
+          <li class="modal-buy-list__item">
+            <label class="modal-buy-list__label">
+              <input type="email" class="modal-buy-list__input" placeholder="Enter your email" cols="22" rows="1"
+                required />
+            </label>
+          </li>
+          <li class="modal-buy-list__item">
+            <label class="modal-buy-list__label">Phone number
+              <img class="modal-buy-list__img" src="./images/icons/ukraine-flag.png">
+              <p class="modal-buy-list__number">+380</p>
+              <input type="email" class="modal-buy-list__input" cols="22" rows="1" placeholder="Phone Number"
+                required />
+            </label>
+            <label class="modal-buy-list__label">Card number
+              <input type="email" class="modal-buy-list__input" cols="22" rows="1" placeholder="Card Number" required />
+              <img class="modal-buy-list__img" src="./images/icons/Mastercard.png">
+            </label>
+          </li>
+          <li class="modal-buy-list__item">
+            <label class="modal-buy-list__label">Comment
+              <textarea class="modal-buy-list__textarea" cols="30" rows="10" placeholder="Enter text"></textarea>
+            </label>
+          </li>
+          <button type="submit" class="modal-buy__submit" data-open-thanks>Submit</button>
+  </form>
+</div>
   
