made changes in products and added structure and styles for modal

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -19,8 +19,8 @@
         <li class="products-list__item swiper-slide">
           <img
             class="products-list__img"
-            src="./images/products/card1/milk-chocolate@1x.jpg"
-            srcet="./images/products/card1/dark-chocolate.jpg 1x, ./images/products/2x/dark-chocolate.jpg 2x"
+            src="./images/products/card1/milk-chocolate@1x.png"
+            srcet="./images/products/card1/milk-chocolate@1x.jpg 1x, ./images/products/2x/milk-chocolate.jpg 2x"
             alt="milk-chocolate"
           />
           <h2 class="products-list__name">APPLE&CRANBERRY</h2>
