--- a/src/partials/modal-thanks.html
+++ b/src/partials/modal-thanks.html
@@ -1,14 +1,14 @@
 <div class="backdrop-thanks is-hidden">
-    <form class="modal">
-            <button class="modal-btn" data-close-thanks>
-                <svg class="modal-btn__svg" width="8" height="8">
+    <form class="modal-thanks">
+            <button class="modal-thanks-btn" data-close-thanks>
+                <svg class="modal-thanks-btn__svg" width="8" height="8">
                     <use href="./images/icons/symbol-defs.svg#icon-close"></use>
                 </svg>
             </button>
         <h1 class="modal__title">thank you!</h1>
-        <p class="modal__text">
+        <p class="modal-thanks__text">
             We are glad that you ordered our chocolate and we are giving you a 20% discount on all our products.
         </p>
-        <img src="./images/sellers/pop-up/chocolate-pop-up.png" alt="chocolate" class="modal__img">
+        <img src="./images/sellers/pop-up/chocolate-pop-up.png" alt="chocolate" class="modal-thanks__img">
     </form>
 </div>
