--- a/src/sass/components/_modal-thanks.scss
+++ b/src/sass/components/_modal-thanks.scss
@@ -9,7 +9,7 @@
     z-index: 99;
 }
 
-.modal {
+.modal-thanks {
     position: fixed;
     padding: 84px 24px 170px 68px;
     z-index: 100;
@@ -53,7 +53,7 @@ margin-bottom: 8px;
     }
 }   
 
-.modal-btn {
+.modal-thanks-btn {
     display: flex;
     justify-content: center;
     align-items: center;
