--- a/src/sass/components/_taste.scss
+++ b/src/sass/components/_taste.scss
@@ -115,6 +115,10 @@
                 border-color: none;
             }
         }
+        &:nth-child(4) .taste-back__filters {
+            gap: 0;
+            justify-content: space-between;
+        }
     }
 }
 
@@ -147,7 +151,6 @@
 }
 
 .taste-back {
-    //  display: none;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -156,7 +159,7 @@
     padding: 28px;
     background-color: getcolor('white-color');
     transform: translateY(-100%);
-
+    overflow: auto;
     @media screen and (min-width:1200px) {
         overflow: hidden;
     }
@@ -168,15 +171,15 @@
     }
 
     &__filters {
-        @include flex($align-items: flex-start);
-        max-width: 180px;
+        @include flex($align-items: flex-start, $justify-content: flex-start);
+        gap: 6px;
+        // max-width: 180px;
         max-height: 24px;
         margin-bottom: 14px;
     }
 
     &__type {
-        width: 114px;
-        height: 24px;
+        padding: 6px 16px;
         text-align: center;
         background-color: getcolor('orange-color');
         color: getcolor('white-color');
@@ -185,8 +188,7 @@
     }
 
     &__benefits {
-        width: 93px;
-        height: 24px;
+        padding: 6px 16px;
         text-align: center;
         background-color: getcolor('white-color');
         color: getcolor('black-color');
