--- a/src/sass/components/_video.scss
+++ b/src/sass/components/_video.scss
@@ -1,5 +1,11 @@
 .video .inner-container {
     padding: 0 20px 72px;
+    @media screen and (min-width:768px) {
+        padding: 0 77px 100px;
+    }
+    @media screen and (min-width:1200px) {
+        padding: 0 32px 128px;
+    }
 }
 
 .video__title {
@@ -7,15 +13,15 @@
     color: getcolor('$black-color');
     text-transform: uppercase;
     text-align: center;
-    @include fonts(20px, 600px, 1.2, normal, -0.03em);
+    @include fonts(20px, 600, 1.2, normal, -0.03em);
     &--orange {
         color: getcolor('orange-color');
     }
     @media screen and (min-width: 768px) {
-        @include fonts(24px, 600px, 1.17, normal, -0.03em);
+        @include fonts(24px, 600, 1.17, normal, -0.03em);
     }
     @media screen and (min-width: 1200px) {
-        @include fonts(24px, 600px, 1.17, normal, -0.03em);
+        @include fonts(24px, 600, 1.17, normal, -0.03em);
     }
     
     }
@@ -25,12 +31,29 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        @media screen and (min-width:768px) {
+            max-width: 614px;
+        }
+        @media screen and (min-width:1200px) {
+            flex-direction: row;
+            align-items: center;
+            max-width: 100%;
+        }
     }
 
     .video-div {
     position: relative;
     width: 335px;
     height: 500px;
+    @media screen and (min-width:768px) {
+        width: 614px;
+        height: 400px;
+    }
+    @media screen and (min-width:1200px) {
+        width: 600px;
+        height: 400px;
+        margin-bottom: 0;
+    }
     &__bg {
         border-radius: 15px;
     }
@@ -60,15 +83,23 @@
         border-radius: 15px;
         background-color: getcolor('white-color');
         padding: 20px 16px;
+        @media screen and (min-width:768px) {
+            padding: 32px;
+        }
+        @media screen and (min-width:1200px) {
+            max-width: 516px;
+        }
         &__title {
         margin-bottom: 20px;
         color: getcolor('black-color');
         @include fonts(18px, 600, 1.33);
         @media screen and (min-width: 768px) {
-            @include fonts(24px, 600px, 1.17, normal, -0.03em);
+            @include fonts(18px, 600, 1.17, normal, -0.03em);
+            margin-bottom: 28px;
+            max-width: 350px;
         }
         @media screen and (min-width: 1200px) {
-            @include fonts(18px, 600px, 1.33, normal, -0.03em);
+            @include fonts(18px, 600, 1.33, normal, -0.03em);
         }
         }
         
@@ -80,7 +111,9 @@
     flex-direction: column;
     gap: 18px;
     padding-left: 16px;
-
+    @media screen and (min-width:1200px) {
+        gap: 24px;
+    }
     &__text {
         color: getcolor('black-color');
         @include fonts(14px, 400, 1.2, normal, -0.02em);
