fixed buttons in section 'products'

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -76,6 +76,7 @@
     border: 1px solid rgba(17, 17, 17, 0.1);
     border-radius: 100px;
     background-color: getcolor('layout-bg');
+    @include fonts(14px, 600, normal);
   }
 }
 .products-banner {
