--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -68,7 +68,7 @@
         padding-bottom: 26px;
         padding-left: 18px;
         border-radius: 15px;
-        border: 1px solid getcolor('black-color');
+        border: 1px solid rgba(17, 17, 17, 0.1);
         width: 335px;
         height: 200px;
         box-shadow: 0 9px 27px 0 rgba(215, 228, 249, 0.25);
