--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -2,7 +2,7 @@
     <div class="inner-container">
       <h2 class="sellers__title"><span class="sellers__title--top">Top </span>Sellers</h2>
           <ul class="sellers-list">
-            <li class="selers-list__item">
+            <li class="sellers-list__item">
               <picture>
                 <source srcset="./images/sellers/desktop/choc-coffe-desk.jpg 1x, ./images/sellers/desktop/2x/choc-coffe-desk2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/sellers/tablet/choc-coffe-tabl.jpg 2x" media="(min-width:768px)">
@@ -17,7 +17,7 @@
                 American tribe called the Mayans.
               </p>
             </li>
-            <li class="selers-list__item">
+            <li class="sellers-list__item">
               <picture>
                 <source srcset="./images/sellers/desktop/choc-filling-desk.jpg 1x, ./images/sellers/desktop/2x/choc-filling-desk2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/sellers/tablet/choc-filling-tabl.jpg 2x" media="(min-width:768px)">
