--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden">
+<div class="backdrop-buy is-hidden">
   <form class="modal-buy">
-    <button class="modal-buy__close">
+    <button class="modal-buy__close" data-close-buy>
       <svg class="modal-buy__svg">
         <use href="./images/icons/symbol-defs.svg#icon-close"></use>
       </svg>
