--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -25,7 +25,7 @@
                 <img class="sellers-list__img" src="./images/sellers/tablet/choc-filling-tabl.jpg" alt="chocolate-2">
               </picture>
                 <img class="sellers-list__img sellers-list__img--hidden" src="./images/sellers/desktop/choc-column-desk.jpg" alt="chocolate-3">
-              <button class="sellers-list__buy" type="button">Buy now</button>
+              <button class="sellers-list__buy" type="button"  data-open-buy>Buy now</button>
             </li>            
           </ul>
     </div>
