--- a/src/sass/components/_modal-buy.scss
+++ b/src/sass/components/_modal-buy.scss
@@ -1,4 +1,4 @@
-.backdrop2 {
+.backdrop-buy {
     position: fixed;
     top: 0;
     right: 0;
@@ -95,7 +95,7 @@
 
 }
 
-.modal-buy-list {
+.modal-buy-list{
     display: flex;
     align-items: center;
     justify-content: center;
