--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -1,6 +1,6 @@
-<div class="backdrop-subscribe ">
+<div class="backdrop-subscribe is-hidden">
 <form class="modal-subscribe">
-    <button type="button" class="modal-subscribe__btn-close" >
+    <button type="button" class="modal-subscribe__btn-close" data-close-subscribe>
         <svg class="modal-subscribe__svg-close">
         <use href="./images/icons/symbol-defs.svg#icon-close"></use>
       </svg></button>
