--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -22,10 +22,10 @@
         <ul class="modal-buy-list">
           <li class="modal-buy-list__item">
             <label class="modal-buy-list__label">Personal information
-              <input type="text" class="modal-buy-list__inputfirst" placeholder="Name" cols="22" rows="1" required />
+              <input type="text" class="modal-buy-list__input" placeholder="Name" cols="22" rows="1" required />
             </label>
             <label class="modal-buy-list__label">
-              <input type="text" class="modal-buy-list__inputsecond" placeholder="Surname" cols="22" rows="1" required />
+              <input type="text" class="modal-buy-list__input" placeholder="Surname" cols="22" rows="1" required />
             </label>
           </li>
           <li class="modal-buy-list__item">
