--- a/src/partials/modal-feedback.html
+++ b/src/partials/modal-feedback.html
@@ -1,6 +1,6 @@
 <div class="backdrop-feedback is-hidden">
     <section class="modal-feedback">
-      <button type="button" class="modal-feedback-btn" data-close-thanks>
+      <button type="button" class="modal-feedback-btn" data-close-feedback>
         <svg class="modal-feedback-btn__svg" width="8" height="8">
           <use href="./images/icons/symbol-defs.svg#icon-close"></use>
         </svg>
