--- a/src/partials/modal-thanks.html
+++ b/src/partials/modal-thanks.html
@@ -5,7 +5,7 @@
                     <use href="./images/icons/symbol-defs.svg#icon-close"></use>
                 </svg>
             </button>
-        <h1 class="modal__title">thank you!</h1>
+        <h1 class="modal-thanks__title">thank you!</h1>
         <p class="modal-thanks__text">
             We are glad that you ordered our chocolate and we are giving you a 20% discount on all our products.
         </p>
