--- a/src/sass/components/_modal-thanks.scss
+++ b/src/sass/components/_modal-thanks.scss
@@ -48,8 +48,13 @@ margin-bottom: 8px;
         position: absolute;
         left: 0;
         bottom: 0;
-        width: 243px;
-        height: 205px;
+        width: 230px;
+        height: 202px;
+        border-bottom-left-radius:14px;
+        @media screen and (min-width:768px){
+            width: 300px;
+            height: 320px;
+        }
     }
 }   
 
