--- a/src/partials/modal-feedback.html
+++ b/src/partials/modal-feedback.html
@@ -1,4 +1,4 @@
-<div class="backdrop-feedback">
+<div class="backdrop-feedback is-hidden">
     <section class="modal-feedback">
       <button type="button" class="modal-feedback-btn" data-close-feedback>
         <svg class="modal-feedback-btn__svg" width="8" height="8">
